test/error/sema/type-mismatch.dsk
let x: bool = 42
echo(x)
